# Face_Tracking_useNPU

./: .gitignore  CMakeLists.txt  README.md  TECHNICAL_DETAILS.md  vcpkg.json
apps/tracker_dev/: CMakeLists.txt  main.cpp
cmake/: README.md
configs/: default.json
docs/: architecture.md  build.md  capture.md  inference.md  models.md  roadmap.md
include/npu_vtube/capture/: capture_service.hpp
include/npu_vtube/core/: application_info.hpp  types.hpp
include/npu_vtube/filter/: one_euro_filter.hpp
include/npu_vtube/inference/: inference_service.hpp
include/npu_vtube/mapping/: parameter_mapper.hpp
include/npu_vtube/models/: model_catalog.hpp  model_resolver.hpp
include/npu_vtube/platform/windows/: environment.hpp
include/npu_vtube/render/: render_backend.hpp
include/npu_vtube/tracking/: tracking_service.hpp
include/npu_vtube/ui/: debug_ui.hpp
models/: README.md
src/: CMakeLists.txt
src/capture/: CMakeLists.txt  capture_service.cpp
src/core/: CMakeLists.txt  application_info.cpp
src/filter/: CMakeLists.txt  one_euro_filter.cpp
src/inference/: CMakeLists.txt  inference_service.cpp
src/mapping/: CMakeLists.txt  parameter_mapper.cpp
src/models/: CMakeLists.txt  model_catalog.cpp  model_resolver.cpp
src/platform/: CMakeLists.txt
src/platform/windows/: CMakeLists.txt  environment.cpp
src/render/: CMakeLists.txt
src/render/dx11/: CMakeLists.txt  render_backend.cpp
src/tracking/: CMakeLists.txt  tracking_service.cpp
src/ui/imgui/: CMakeLists.txt  debug_ui.cpp
tests/: CMakeLists.txt  smoke_test.cpp
